--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.elephant</groupId>
 	<artifactId>javaconda</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 
 	<name>Java Conda</name>
 	<description>Conda wrapper for Java.</description>
@@ -48,7 +48,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/ksugar/javaconda</connection>
 		<developerConnection>scm:git:git@github.com:ksugar/javaconda</developerConnection>
-		<tag>javaconda-0.1.0</tag>
+		<tag>HEAD</tag>
 		<url>https://github.com/ksugar/javaconda</url>
 	</scm>
 	<issueManagement>
