--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.javaconda</groupId>
 	<artifactId>javaconda</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 
 	<name>Javaconda</name>
 	<description>Java wrapper for Conda.</description>
@@ -48,7 +48,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/javaconda/javaconda</connection>
 		<developerConnection>scm:git:git@github.com:javaconda/javaconda</developerConnection>
-		<tag>HEAD</tag>
+		<tag>javaconda-0.1.1</tag>
 		<url>https://github.com/javaconda/javaconda</url>
 	</scm>
 	<issueManagement>
