--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>3.8.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
