--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,13 @@ jobs:
     
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
         include:
           - os: windows-latest
             shell: cmd
+          - os: macos-latest
+            shell: bash
+          - os: ubuntu-latest
+            shell: bash
 
     steps:
     - uses: actions/checkout@v2
@@ -30,4 +33,5 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
+      shell: ${{ matrix.shell }}
       run: mvn -B package --file pom.xml
