--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,13 +16,7 @@ jobs:
     
     strategy:
       matrix:
-        include:
-          - os: windows-latest
-            shell: cmd
-          - os: macos-latest
-            shell: bash
-          - os: ubuntu-latest
-            shell: bash
+        os: [windows-latest, macos-latest, ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -33,5 +27,9 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      shell: ${{ matrix.shell }}
-      run: mvn -B package --file pom.xml
+      uses: knicknic/os-specific-run@v1.0.3
+      with:
+        windowsShell: cmd
+        macos: mvn -B package --file pom.xml
+        linux: mvn -B package --file pom.xml
+        windows: mvn -B package --file pom.xml
